# FileSystem

./: .gitignore  README.md
os/: CMakeLists.txt
os/src/app/: main.cpp
os/src/cmd/: cmd.cpp  cmd.h  cmd_base.cpp  cmd_bash.cpp  cmd_cat.cpp  cmd_chmod.cpp  cmd_cp.cpp  cmd_help.cpp  cmd_link.cpp  cmd_rename.cpp  cmd_rm.cpp  cmd_test.cpp  cmd_user.cpp  cmd_writer.cpp
os/src/fs/: access.cpp  ballfre.cpp  close.cpp  create.cpp  dir.cpp  format.cpp  fs.cpp  fs.h  halt.cpp  iallfre.cpp  igetput.cpp  install.cpp  log.cpp  mod.cpp  name.cpp  open.cpp  rdwt.cpp  rmfidir.cpp
web/: app.js  package-lock.json  package.json  restart.sh
web/public/: test  test.c
web/public/javascripts/: index.js  login.js
web/public/stylesheets/: style.css  switch.css
web/routes/: login.js  osfs.js
web/routes/script/: osfs_update.sh
web/views/: index.jade  layout.jade  login.jade
